Prevent text wrapping for numbers columns only in board tables ref #306

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -1402,6 +1402,11 @@ table.boardtable.w900 td:last-child {
 	color: white;
 }
 
+table.boardtable .nobreak {
+	word-break: keep-all;
+	overflow-wrap: break-word;
+}
+
 /* ^="f" means only where attachment is false, to prevent showing on attachment files with audio or video mime type */
 .post-file-src[data-type="audio"][data-attachment^="f"]::after,
 .post-file-src[data-type="video"][data-attachment^="f"]::after {
@@ -1473,6 +1478,7 @@ table, .boardtable {
 .nowrap {
 	white-space: nowrap;
 }
+
 
 #settingsmodal{
 	min-width: 400px;
